--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.jpa.open-in-view=true
+spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
