Add cache for getting menus

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.web.locale=en
-spring.cache.cache-names=users
+spring.cache.type=caffeine
+spring.cache.cache-names=menus
+spring.cache.caffeine.spec=maximumSize=1,expireAfterAccess=60s
