Add user caching

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.web.locale=en
 spring.cache.type=caffeine
-spring.cache.cache-names=menus
-spring.cache.caffeine.spec=maximumSize=1,expireAfterAccess=60s
+spring.cache.cache-names=menus, user
+spring.cache.caffeine.spec=maximumSize=200,expireAfterAccess=60s
